// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation should render correctly 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <nav
    class="StyledNav-sc-158x7z5-5 dWucaK"
    dir="ltr"
    role="navigation"
  >
    <div
      class="NavWrapper-sc-158x7z5-0 ermFdP"
    >
      <ul
        class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
        role="list"
      >
        <li
          class="StyledListItem-sc-158x7z5-3 hfeLtA"
          dir="ltr"
          role="listitem"
        >
          <a
            class="StyledLink-sc-158x7z5-2 hndaIO"
            data-navigation="test_navigation"
            href="/igbo"
          >
            <span
              class="StyledSpan-sc-158x7z5-4 ktTFbu"
              role="text"
            >
              <span
                class="emotion-0 emotion-1"
              >
                Current page
                , 
              </span>
              Akụkọ
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-158x7z5-3 hfeLtA"
          dir="ltr"
          role="listitem"
        >
          <a
            class="StyledLink-sc-158x7z5-2 isJjNp"
            data-navigation="test_navigation"
            href="/igbo/egwuregwu"
          >
            Egwuregwu
          </a>
        </li>
        <li
          class="StyledListItem-sc-158x7z5-3 hfeLtA"
          dir="ltr"
          role="listitem"
        >
          <a
            class="StyledLink-sc-158x7z5-2 isJjNp"
            data-navigation="test_navigation"
            href="/igbo/media/video"
          >
            Ihe nkiri
          </a>
        </li>
        <li
          class="StyledListItem-sc-158x7z5-3 hfeLtA"
          dir="ltr"
          role="listitem"
        >
          <a
            class="StyledLink-sc-158x7z5-2 isJjNp"
            data-navigation="test_navigation"
            href="/igbo/popular/read"
          >
            Nke ka ewuewu
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Navigation should render correctly when ampOpenClass prop is provided 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <nav
    class="StyledNav-sc-158x7z5-5 jcZqgR"
    dir="ltr"
    role="navigation"
  >
    <div
      class="NavWrapper-sc-158x7z5-0 ermFdP"
    >
      <ul
        class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
        role="list"
      >
        <li
          class="StyledListItem-sc-158x7z5-3 hfeLtA"
          dir="ltr"
          role="listitem"
        >
          <a
            class="StyledLink-sc-158x7z5-2 hndaIO"
            data-navigation="test_navigation"
            href="/igbo"
          >
            <span
              class="StyledSpan-sc-158x7z5-4 ktTFbu"
              role="text"
            >
              <span
                class="emotion-0 emotion-1"
              >
                Current page
                , 
              </span>
              Akụkọ
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-158x7z5-3 hfeLtA"
          dir="ltr"
          role="listitem"
        >
          <a
            class="StyledLink-sc-158x7z5-2 isJjNp"
            data-navigation="test_navigation"
            href="/igbo/egwuregwu"
          >
            Egwuregwu
          </a>
        </li>
        <li
          class="StyledListItem-sc-158x7z5-3 hfeLtA"
          dir="ltr"
          role="listitem"
        >
          <a
            class="StyledLink-sc-158x7z5-2 isJjNp"
            data-navigation="test_navigation"
            href="/igbo/media/video"
          >
            Ihe nkiri
          </a>
        </li>
        <li
          class="StyledListItem-sc-158x7z5-3 hfeLtA"
          dir="ltr"
          role="listitem"
        >
          <a
            class="StyledLink-sc-158x7z5-2 isJjNp"
            data-navigation="test_navigation"
            href="/igbo/popular/read"
          >
            Nke ka ewuewu
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Navigation should render correctly when isOpen is true 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <nav
    class="StyledNav-sc-158x7z5-5 dEbGfi"
    dir="ltr"
    role="navigation"
  >
    <div
      class="NavWrapper-sc-158x7z5-0 ermFdP"
    >
      <ul
        class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
        role="list"
      >
        <li
          class="StyledListItem-sc-158x7z5-3 hfeLtA"
          dir="ltr"
          role="listitem"
        >
          <a
            class="StyledLink-sc-158x7z5-2 hndaIO"
            data-navigation="test_navigation"
            href="/igbo"
          >
            <span
              class="StyledSpan-sc-158x7z5-4 ktTFbu"
              role="text"
            >
              <span
                class="emotion-0 emotion-1"
              >
                Current page
                , 
              </span>
              Akụkọ
            </span>
          </a>
        </li>
        <li
          class="StyledListItem-sc-158x7z5-3 hfeLtA"
          dir="ltr"
          role="listitem"
        >
          <a
            class="StyledLink-sc-158x7z5-2 isJjNp"
            data-navigation="test_navigation"
            href="/igbo/egwuregwu"
          >
            Egwuregwu
          </a>
        </li>
        <li
          class="StyledListItem-sc-158x7z5-3 hfeLtA"
          dir="ltr"
          role="listitem"
        >
          <a
            class="StyledLink-sc-158x7z5-2 isJjNp"
            data-navigation="test_navigation"
            href="/igbo/media/video"
          >
            Ihe nkiri
          </a>
        </li>
        <li
          class="StyledListItem-sc-158x7z5-3 hfeLtA"
          dir="ltr"
          role="listitem"
        >
          <a
            class="StyledLink-sc-158x7z5-2 isJjNp"
            data-navigation="test_navigation"
            href="/igbo/popular/read"
          >
            Nke ka ewuewu
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`Scrollable Navigation should render correctly 1`] = `
.emotion-0 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

<div>
  <div
    class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz"
    dir="ltr"
  >
    <nav
      class="StyledNav-sc-158x7z5-5 dWucaK"
      dir="ltr"
      role="navigation"
    >
      <div
        class="NavWrapper-sc-158x7z5-0 ermFdP"
      >
        <ul
          class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
          role="list"
        >
          <li
            class="StyledListItem-sc-158x7z5-3 hfeLtA"
            dir="ltr"
            role="listitem"
          >
            <a
              class="StyledLink-sc-158x7z5-2 hndaIO"
              data-navigation="test_navigation"
              href="/igbo"
            >
              <span
                class="StyledSpan-sc-158x7z5-4 ktTFbu"
                role="text"
              >
                <span
                  class="emotion-0 emotion-1"
                >
                  Current page
                  , 
                </span>
                Akụkọ
              </span>
            </a>
          </li>
          <li
            class="StyledListItem-sc-158x7z5-3 hfeLtA"
            dir="ltr"
            role="listitem"
          >
            <a
              class="StyledLink-sc-158x7z5-2 isJjNp"
              data-navigation="test_navigation"
              href="/igbo/egwuregwu"
            >
              Egwuregwu
            </a>
          </li>
          <li
            class="StyledListItem-sc-158x7z5-3 hfeLtA"
            dir="ltr"
            role="listitem"
          >
            <a
              class="StyledLink-sc-158x7z5-2 isJjNp"
              data-navigation="test_navigation"
              href="/igbo/media/video"
            >
              Ihe nkiri
            </a>
          </li>
          <li
            class="StyledListItem-sc-158x7z5-3 hfeLtA"
            dir="ltr"
            role="listitem"
          >
            <a
              class="StyledLink-sc-158x7z5-2 isJjNp"
              data-navigation="test_navigation"
              href="/igbo/popular/read"
            >
              Nke ka ewuewu
            </a>
          </li>
        </ul>
      </div>
    </nav>
  </div>
</div>
`;
